k8s/manifests/redis/templates/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sns-ingress
  namespace: sns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/payment-methods
        backend:
          service:
            name: payment
            port:
              number: 3000
      - path: /api/subscriptions
        backend:
          service:
            name: subscription
            port:
              number: 3001
